CON-TOOL 0009: fix monthly update.

--- a/connectionmonitoringtool/web/WEB-INF/web.xml
+++ b/connectionmonitoringtool/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>MailServlet</servlet-name>
         <servlet-class>org.september.servlet.MailServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UpdateDBServlet</servlet-name>
+        <servlet-class>org.september.servlet.UpdateDBServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>VerifyConectionServlet</servlet-name>
         <url-pattern>/verify</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>MailServlet</servlet-name>
         <url-pattern>/mail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateDBServlet</servlet-name>
+        <url-pattern>/update</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>ConexionApplication.jsp</welcome-file>
