--- a/dashboard/nbproject/project.properties
+++ b/dashboard/nbproject/project.properties
@@ -1,17 +1,8 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
-auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
-auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
-auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
-auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
-auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
-auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
-auxiliary.org-netbeans-modules-whitelist.whitelist-oracle=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -28,15 +19,16 @@ debug.classpath=${build.classes.dir}:${javac.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
 display.browser=true
+# Files to be excluded from distribution war
+dist.archive.excludes=
 dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
-endorsed.classpath=
 excludes=
 includes=**
-j2ee.compile.on.save=false
-j2ee.copy.static.files.on.save=false
+j2ee.compile.on.save=true
+j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.5
 j2ee.server.type=AppEngine
@@ -52,10 +44,9 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
-javac.test.processorpath=${javac.test.classpath}
+    ${build.classes.dir}
+javac.test.processorpath=\
+    ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -68,11 +59,10 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jspcompilation.classpath=${jspc.classpath}:${javac.classpath}
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.license=apache20
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
@@ -85,7 +75,7 @@ source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
-war.ear.name=connectionmonitoringtool.war
-war.name=connectionmonitoringtool.war
+war.ear.name=${war.name}
+war.name=dashboard.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
