--- a/dashboard/web/WEB-INF/web.xml
+++ b/dashboard/web/WEB-INF/web.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 Copyright 2015 Desarrollos Red de Pruebas C.A.
 
@@ -16,13 +16,13 @@ limitations under the License.
 -->
 
 
-<appengine-web-app xmlns="http://appengine.google.com/ns/1.0">
-  <application>cmtool-reddepruebas</application>
-  <version>1</version>
-  <threadsafe>true</threadsafe>
-  
-  <inbound-services>
-    <service>mail</service>
-  </inbound-services>
-  
-</appengine-web-app>
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+    <session-config>
+        <session-timeout>
+            30
+        </session-timeout>
+    </session-config>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+</web-app>
