REDDEPRUEBAS-TOOLS#24: Change notification email hour fixes #24

--- a/caurimare/nbproject/project.properties
+++ b/caurimare/nbproject/project.properties
@@ -85,7 +85,7 @@ source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
-war.ear.name=connectionmonitoringtool.war
-war.name=connectionmonitoringtool.war
+war.ear.name=caurimare.war
+war.name=caurimare.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
